# krippendorff_alpha

./: .buildinfo  README.md  genindex.html  index.html  krippendorff_alpha.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_pages.yml
_modules/: index.html  krippendorff_alpha.html
docs/: conf.py  index.rst  krippendorff_alpha.rst  modules.rst
src/: __init__.py  krippendorff_alpha.py
src/krippendorff_alpha/: krippendorff_alpha.py
